--- a/views/pages/info/phonetic-alphabet.ejs
+++ b/views/pages/info/phonetic-alphabet.ejs
@@ -8,7 +8,7 @@
             </tr>
         </thead>
         <tbody>
-            <% for (const entry of phoneticAlphabet) { %>
+            <% for (const entry of additionalData.phoneticAlphabet) { %>
             <tr>
                 <td><%= entry.letter %></td>
                 <td><%= entry.codeWord %></td>
