--- a/views/pages/info/state-abbreviations.ejs
+++ b/views/pages/info/state-abbreviations.ejs
@@ -10,7 +10,7 @@
             </tr>
         </thead>
         <tbody>
-            <% for (const state of stateAbbreviations) { %>
+            <% for (const state of additionalData.stateAbbreviations) { %>
             <tr>
                 <td><%= state.name %></td>
                 <td><%= state.postal %></td>
