--- a/views/pages/info/tone-indicators.ejs
+++ b/views/pages/info/tone-indicators.ejs
@@ -9,7 +9,7 @@
             </tr>
         </thead>
         <tbody>
-            <% for (const entry of toneIndicators) { %>
+            <% for (const entry of additionalData.toneIndicators) { %>
             <tr>
                 <td>/<%= entry.indicator %></td>
                 <td><%- entry.meaning %></td>
