--- a/views/pages/info/text-abbreviations.ejs
+++ b/views/pages/info/text-abbreviations.ejs
@@ -8,7 +8,7 @@
             </tr>
         </thead>
         <tbody>
-            <% for (const entry of textAbbreviations) { %>
+            <% for (const entry of additionalData.textAbbreviations) { %>
             <tr>
                 <td><%= entry.abbreviation %></td>
                 <td><%- entry.meaning %></td>
