--- a/views/pages/fun/mp3-player.ejs
+++ b/views/pages/fun/mp3-player.ejs
@@ -13,12 +13,15 @@
                     <div id="progress-bar"></div>
                 </div>
                 <div class="buttons">
-                    <i class="player-icon fa-solid fa-step-backward" id="previous"></i>
-                    <i class="player-icon fa-solid fa-backward" id="rewind"></i>
-                    <i class="player-icon fa-solid fa-play" id="play-pause"></i>
-                    <i class="player-icon fa-solid fa-forward" id="forward"></i>
-                    <i class="player-icon fa-solid fa-step-forward" id="next"></i>
-                    <i class="player-icon fa-solid fa-volume-up" style="justify-self: right" id="toggle-mute"></i>
+                    <span style="margin-right: 20px"
+                        ><span id="toggle-shuffle"><i id="shuffle-icon" class="fa-solid fa-shuffle"></i><i id="shuffle-status" class="fa-solid fa-xmark"></i></span
+                    ></span>
+                    <span><i class="player-icon fa-solid fa-step-backward" id="previous"></i></span>
+                    <span><i class="player-icon fa-solid fa-backward" id="rewind"></i></span>
+                    <span><i class="player-icon fa-solid fa-play" id="play-pause"></i></span>
+                    <span><i class="player-icon fa-solid fa-forward" id="forward"></i></span>
+                    <span><i class="player-icon fa-solid fa-step-forward" id="next"></i></span>
+                    <span style="margin-left: 20px"><i class="player-icon fa-solid fa-volume-up" id="toggle-mute"></i></span>
                 </div>
             </div>
             <div class="playlists" style="font-size: 18px; padding: 15px; margin-top: 15px">
