--- a/public/styles/pages/fun/mp3-player.css
+++ b/public/styles/pages/fun/mp3-player.css
@@ -81,15 +81,22 @@
     color: #f1a93c;
 }
 
-.playlist-section-title {
+.playlist-section-title > a {
     color: #ffc266;
+    display: inline-block;
     font-size: 20px;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    margin-bottom: -10px;
+    margin-top: 20px;
 }
 
-.playlist-section-title:hover {
+.playlist-section-title > a:hover {
     color: #f1a93c;
+}
+
+.playlist-section-title > i.player-icon {
+    display: inline-block;
+    margin-left: 8px;
+    font-size: 18px;
 }
 
 .playlist-track {
@@ -139,15 +146,14 @@
 }
 
 .buttons > span {
-    /* display: inline-block; */
-    text-align: center;
     margin-bottom: 15px;
     margin-inline: 2px;
     margin-top: 25px;
+    text-align: center;
     width: 30px;
 }
 
-.buttons .player-icon,
+.player-icon,
 #shuffle-icon {
     color: #ffc266;
     cursor: pointer;
@@ -163,11 +169,11 @@
 #shuffle-status {
     background-color: #1e2529;
     border-radius: 10px;
-    transform: translate(-8px, 2px);
+    cursor: pointer;
     font-size: 10px;
     padding: 1.5px;
+    transform: translate(-8px, 2px);
     width: 10px;
-    cursor: pointer;
 }
 
 .progress {
