--- a/public/styles/pages/fun/mp3-player.css
+++ b/public/styles/pages/fun/mp3-player.css
@@ -81,12 +81,15 @@
     color: #f1a93c;
 }
 
+.playlist-section-title {
+    display: inline-block;
+    margin-bottom: 5px;
+    margin-top: 20px;
+}
+
 .playlist-section-title > a {
     color: #ffc266;
-    display: inline-block;
     font-size: 20px;
-    margin-bottom: -10px;
-    margin-top: 20px;
 }
 
 .playlist-section-title > a:hover {
@@ -94,9 +97,8 @@
 }
 
 .playlist-section-title > i.player-icon {
-    display: inline-block;
-    margin-left: 8px;
     font-size: 18px;
+    padding-left: 8px;
 }
 
 .playlist-track {
