--- a/views/pages/info/tone-indicators.ejs
+++ b/views/pages/info/tone-indicators.ejs
@@ -1,4 +1,4 @@
-<p class="info">Tone Indicators can be used to express tones or emotions in online messages, and are usually appended to a message.</p>
+<p class="info">Tone indicators can be used to express tones or emotions in online messages, and are usually appended to a message.</p>
 <table class="info-table" style="overflow-x: hidden; margin-top: 30px">
     <thead>
         <tr>
