--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -104,13 +104,18 @@ nav {
     position: fixed;
     right: 0px;
     top: 0px;
-    transition: 0.4s;
     z-index: 5000;
 }
 
 .nav-shrunk {
     font-size: 18px;
     padding: 25px;
+}
+
+nav,
+.logo,
+.logo-tools {
+    transition: padding 0.4s ease, font-size 0.4s ease;
 }
 
 @media only screen and (max-width: 600px) {
@@ -127,7 +132,6 @@ nav {
     font-size: 28px;
     font-weight: 700;
     text-align: left;
-    transition: 0.4s;
 }
 
 .nav-shrunk .logo {
@@ -137,7 +141,6 @@ nav {
 .logo-tools {
     font-size: 22px;
     font-weight: 700;
-    transition: 0.4s;
 }
 
 .nav-shrunk .logo-tools {
@@ -180,7 +183,6 @@ nav {
     height: 30px;
     justify-content: center;
     margin: auto;
-    transition: 0.4s;
     width: 30px;
 }
 
@@ -190,7 +192,6 @@ nav {
     color: #c5c5cc !important;
     margin-top: -10px !important;
     padding: 6px 0px !important;
-    transition: 0.4s;
     width: 0px !important;
 }
 
