--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -6,19 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="robots" content="index, follow" />
-        <title><%= title ? `${title} | ` : '' %>Eejit's Tools</title>
+        <title>{{#if title}}{{title}} | {{/if}}Eejit's Tools</title>
         <!-- Search Engine -->
-        <meta name="title" content="<%= title || "Eejit's Tools" %>" />
-        <meta name="description" content="<%= descriptionParsed || 'Some useful tools for general purposes!'%>" />
-        <meta name="keywords" content="eejitstools,eejits tools,eejit's tools,eejit43<%- keywords.length > 0 ? `,${keywords.join(',')}` : ''%>" />
+        <meta name="title" content="{{#if title}}{{title}}{{else}}Eejit's Tools{{/if}}" />
+        <meta name="description" content="{{#if descriptionParsed}}{{descriptionParsed}}{{else}}Some useful tools for general purposes!{{/if}}" />
+        <meta name="keywords" content="eejitstools,eejits tools,eejit's tools,eejit43{{#unless (isEmpty keywords)}},{{keywords}}{{/unless}}" />
         <meta property="image" content="https://eejitstools.com/favicons/icon.png" />
         <!-- Schema.org for Google -->
-        <meta itemprop="name" content="<%= title || "Eejit's Tools" %>" />
-        <meta itemprop="description" content="<%= descriptionParsed || 'Some useful tools for general purposes!'%>" />
+        <meta itemprop="name" content="{{#if title}}{{title}}{{else}}Eejit's Tools{{/if}}" />
+        <meta itemprop="description" content="{{#if descriptionParsed}}{{descriptionParsed}}{{else}}Some useful tools for general purposes!{{/if}}" />
         <meta itemprop="image" content="https://eejitstools.com/favicons/icon.png" />
         <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-        <meta property="og:title" content="<%= title || "Eejit's Tools" %>" />
-        <meta property="og:description" content="<%= descriptionParsed || 'Some useful tools for general purposes!'%>" />
+        <meta property="og:title" content="{{#if title}}{{title}}{{else}}Eejit's Tools{{/if}}" />
+        <meta property="og:description" content="{{#if descriptionParsed}}{{descriptionParsed}}{{else}}Some useful tools for general purposes!{{/if}}" />
         <meta property="og:image" content="https://eejitstools.com/favicons/icon.png" />
         <meta property="og:image:alt" content="Eejit's Tools Wrench" />
         <meta property="og:url" content="https://eejitstools.com" />
@@ -27,8 +27,8 @@
         <meta property="og:type" content="website" />
         <!-- Twitter -->
         <meta name="twitter:card" content="summary" />
-        <meta name="twitter:title" content="<%= title ? `${title} | ` : '' %>Eejit's Tools" />
-        <meta name="twitter:description" content="<%= descriptionParsed || 'Some useful tools for general purposes!'%>" />
+        <meta name="twitter:title" content="{{#if title}}{{title}} | {{/if}}Eejit's Tools" />
+        <meta name="twitter:description" content="{{#if descriptionParsed}}{{descriptionParsed}}{{else}}Some useful tools for general purposes!{{/if}}" />
         <meta name="twitter:url" content="https://eejitstools.com" />
         <meta name="twitter:image" content="https://eejitstools.com/favicons/icon.png" />
         <meta name="twitter:image:alt" content="Eejit's Tools Wrench" />
@@ -46,19 +46,21 @@
 
         <!-- Styles -->
         <link rel="stylesheet" href="/styles/styles.css" />
-        <% for (const style of additionalStyles) { %>
-        <link rel="stylesheet" href="/styles/<%= style %>" />
-        <% } %> <% if (style) { %>
-        <link rel="stylesheet" href="/styles/pages<%= link %>.css" />
-        <% } %>
+        {{#if style}}
+        <link rel="stylesheet" href="/styles/pages{{link}}.css" />
+        {{/if}}
+        {{#each additionalStyles}}
+        <link rel="stylesheet" href="/styles/{{this.link}}" />
+        {{/each}}
 
         <!-- Scripts -->
         <script src="/scripts/global.js" type="module"></script>
-        <% if (script) { %>
-        <script src="/scripts/pages<%= link %>.js" type="module"></script>
-        <% } %> <% for (const script of additionalScripts) { %>
-        <script src="<%- !script.external ? '/scripts/' : '' %><%= script.link %>"<%- script.module ? ' type="module"' : '' %>></script>
-        <% } %>
+        {{#if script}}
+        <script src="/scripts/pages{{link}}.js" type="module"></script>
+        {{/if}}
+        {{#each additionalScripts}}
+        <script src="{{this.link}}"{{#if this.module}} type="module"{{/if}}></script>
+        {{/each}}
     </head>
     <body>
         <noscript>
@@ -82,12 +84,14 @@
                 <a href="https://github.com/Eejit43/eejitstools-v2" target="_blank" class="source">Source <i class="fa-brands fa-github" style="margin-left: 3px; transform: translateY(1.5px)"></i></a>
             </span>
         </nav>
-        <% if (toolbox) { %>
+        {{#if toolbox}}
         <div class="toolbox">
-            <h1><i class="fa-regular fa-<%= icon %>" <% if (iconStyle) { %> style="<%= iconStyle %>" <% } %>></i> <%- toolboxTitle || title || "Eejit's Tools" %>:</h1>
-            <% } %> <%- body %> <% if (toolbox) { %>
+            <h1><i class="fa-regular fa-{{icon}}" {{#if iconStyle}} style="{{iconStyle}}" {{/if}}></i> {{#if toolboxTitle}}{{{toolboxTitle}}}{{else}}{{#if title}}{{title}}{{else}}Eejit's Tools{{/if}}{{/if}}:</h1>
+            {{{body}}}
         </div>
-        <% } %>
+        {{else}}
+        {{{body}}}
+        {{/if}}
         <div class="footer-utils">
             <button id="scroll-to-top"><i class="fa-solid fa-arrow-up"></i></button>
             <button id="show-shortcuts">⌘</button>
