--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,3 @@
 <span class="error-title">{{title}} <i class="fa-regular fa-face-sad-tear" style="font-size: 80%"></i></span>
 <div class="error-warning">{{message}}<br /><a href="/" class="error-link">Take me back to safety!</a></div>
-<img src="https://http.cat/{{status}}" alt="{{status}} - {{title}}" class="error-image" />
+<img src="https://httpstatusdogs.com/img/{{status}}.jpg" alt="{{status}} - {{title}}" class="error-image" />
