various fixes/additions
* fix `binary-calc` hex output
* add switch option to many converters
* add cooldown on incorrect input in `coins-list`

--- a/views/pages/tools/temperature-converter.hbs
+++ b/views/pages/tools/temperature-converter.hbs
@@ -5,7 +5,7 @@
         <option value="2">Celsius</option>
         <option value="3">Kelvin</option>
     </select>
-    <br /><input id="input" pattern="[0-9]*" /> <br /><button id="reset">Reset</button>
+    <br /><input id="input" pattern="[0-9]*" /> <br /><button id="reset">Reset</button> <button id="switch">Switch input and output</button>
 </div>
 <hr style="margin-top: 30px" />
 <div class="tooltext">
