--- a/views/pages/tools/time-converter.hbs
+++ b/views/pages/tools/time-converter.hbs
@@ -15,7 +15,7 @@
         <option value="12">Centuries</option>
         <option value="13">Millennia</option>
     </select>
-    <br /><input id="input" pattern="[0-9]*" /> <br /><button id="reset">Reset</button>
+    <br /><input id="input" pattern="[0-9]*" /> <br /><button id="reset">Reset</button> <button id="switch">Switch input and output</button>
 </div>
 <hr style="margin-top: 30px" />
 <div class="tooltext">
