--- a/views/pages/fun/astronomy-picture.hbs
+++ b/views/pages/fun/astronomy-picture.hbs
@@ -3,13 +3,16 @@
 
     <br /><br />Fetch from specified date:<br />
 
-    Year: <input id="year" type="text" pattern="[0-9]*" maxlength="4" style="width: 45px" />
+    Year:
+    <input id="year" type="text" pattern="[0-9]*" maxlength="4" style="width: 45px" />
     <div class="tab"></div>
 
-    Month: <input id="month" type="text" pattern="[0-9]*" max="12" maxlength="2" style="width: 30px" />
+    Month:
+    <input id="month" type="text" pattern="[0-9]*" max="12" maxlength="2" style="width: 30px" />
     <div class="tab"></div>
 
-    Date: <input id="date" type="text" pattern="[0-9]*" max="31" maxlength="2" style="width: 30px" />
+    Date:
+    <input id="date" type="text" pattern="[0-9]*" max="31" maxlength="2" style="width: 30px" />
 
     <button id="get-date">Get info</button><br /><button id="reset-date">Set to current date</button>
 </div>
