--- a/views/pages/fun/eight-ball.hbs
+++ b/views/pages/fun/eight-ball.hbs
@@ -1,5 +1,6 @@
 <div class="tooltext">
-    Your Question: <input id="userQuestion" />
-    <button id="rollBall">Roll ball!</button>
+    Your Question:
+    <input id="question" />
+    <button id="roll">Roll ball!</button>
     <span id="result"></span>
 </div>
