--- a/views/pages/info/queer-calendar.hbs
+++ b/views/pages/info/queer-calendar.hbs
@@ -3,16 +3,20 @@
 
     <span id="events" style="color: mediumspringgreen; display: block; padding-bottom: 25px"><span class="error">Loading data...</span></span>
 
-    Month: <input id="month" type="text" pattern="[0-9]*" max="12" maxlength="2" style="width: 30px" />
+    Month:
+    <input id="month" type="text" pattern="[0-9]*" max="12" maxlength="2" style="width: 30px" />
     <div class="tab"></div>
 
-    Date: <input id="date" type="text" pattern="[0-9]*" max="31" maxlength="2" style="width: 30px" />
+    Date:
+    <input id="date" type="text" pattern="[0-9]*" max="31" maxlength="2" style="width: 30px" />
 
     <button id="get-date" style="margin-left: 8px">Get info</button>
 
     <button id="reset-date" style="display: block; margin: 10px 0 25px">Set to current date</button>
 
-    <a target="_blank" id="year-overview">View year overview</a> • <a target="_blank" id="year-overview-list">View year overview (list)</a>
+    <a target="_blank" id="year-overview">View year overview</a>
+    •
+    <a target="_blank" id="year-overview-list">View year overview (list)</a>
 
     <div class="color-box">
         <div class="red"></div>
