--- a/views/pages/tools/base64-converter.hbs
+++ b/views/pages/tools/base64-converter.hbs
@@ -1,7 +1,7 @@
 <div class="tooltext">
     Input:<br />
     <textarea id="input" style="width: 50%"></textarea>
-    <br /><button id="encode">Encode <i id="encode-runResult"></i></button><button id="decode">Decode <i id="decode-runResult"></i></button>
+    <br /><button id="encode">Encode <i id="encode-result"></i></button><button id="decode">Decode <i id="decode-result"></i></button>
     <button id="clear">Clear</button>
 </div>
 <hr style="margin-top: 30px" />
