--- a/views/pages/tools/case-changer.hbs
+++ b/views/pages/tools/case-changer.hbs
@@ -1,7 +1,7 @@
 <div class="tooltext">
     Input:<br />
     <textarea id="input" style="width: 50%"></textarea>
-    <br /><button id="to-upper">To uppercase <i id="uppercase-runResult"></i></button><button id="to-lower">To lowercase <i id="lowercase-runResult"></i></button><button id="to-title">To title case <i id="title-runResult"></i></button><button id="to-sentence">To sentence case <i id="sentence-runResult"></i></button>
+    <br /><button id="to-upper">To uppercase <i id="uppercase-result"></i></button><button id="to-lower">To lowercase <i id="lowercase-result"></i></button><button id="to-title">To title case <i id="title-result"></i></button><button id="to-sentence">To sentence case <i id="sentence-result"></i></button>
     <button id="clear">Clear</button>
 </div>
 <hr style="margin-top: 30px" />
