--- a/views/pages/tools/color-info.hbs
+++ b/views/pages/tools/color-info.hbs
@@ -21,18 +21,38 @@
 <div class="color-grid" style="margin-top: 25px; line-height: 180%; grid-template-columns: repeat(auto-fill, minmax(500px, 1fr))">
     <div>
         <span class="tooltext" style="line-height: 50%; margin-bottom: -5px; display: block">Manual Input & Results:</span><br />
-        Name: <input id="name" style="width: 8rem" /> <button id="copy-name">Copy</button><br />
-        Hex (Hexadecimal): <input id="hex" style="width: 6rem" /> <button id="copy-hex">Copy</button><br />
-        Decimal: <input id="decimal" style="width: 6rem" class="no-arrow" type="number" min="0" max="16777215" /> <button id="copy-decimal">Copy</button><br />
-        RGB (Red, Green, Blue): <input id="rgb" style="width: 10rem" /> <button id="copy-rgb">Copy</button><br />
-        HSL (Hue, Saturation, Lightness): <input id="hsl" style="width: 15rem" /> <button id="copy-hsl">Copy</button><br />
-        CMYK (Cyan, Magenta, Yellow, Black): <input id="cmyk" style="width: 16rem" /> <button id="copy-cmyk">Copy</button><br />
-        Alpha Value: <input id="alpha" style="width: 3rem" class="no-arrow" type="number" min="0" max="1" /> <button id="copy-alpha">Copy</button>
+        Name:
+        <input id="name" style="width: 8rem" />
+        <button id="copy-name">Copy</button><br />
+        Hex (Hexadecimal):
+        <input id="hex" style="width: 6rem" />
+        <button id="copy-hex">Copy</button><br />
+        Decimal:
+        <input id="decimal" style="width: 6rem" class="no-arrow" type="number" min="0" max="16777215" />
+        <button id="copy-decimal">Copy</button><br />
+        RGB (Red, Green, Blue):
+        <input id="rgb" style="width: 10rem" />
+        <button id="copy-rgb">Copy</button><br />
+        HSL (Hue, Saturation, Lightness):
+        <input id="hsl" style="width: 15rem" />
+        <button id="copy-hsl">Copy</button><br />
+        CMYK (Cyan, Magenta, Yellow, Black):
+        <input id="cmyk" style="width: 16rem" />
+        <button id="copy-cmyk">Copy</button><br />
+        Alpha Value:
+        <input id="alpha" style="width: 3rem" class="no-arrow" type="number" min="0" max="1" />
+        <button id="copy-alpha">Copy</button>
     </div>
     <div>
         <span class="tooltext" style="line-height: 50%; margin-bottom: -5px; display: block">Color Information:</span><br />
-        Luminance (relative, see <a href="https://www.w3.org/TR/2008/REC-WCAG20-20081211/#relativeluminancedef" target="_blank">WCAG definition</a>): <input id="luminance" style="width: 4rem" disabled /> <button id="copy-luminance">Copy</button><br />
-        Temperature (Kelvin, estimated, from <a href="https://www.zombieprototypes.com/?p=210" target="_blank">color temperature scale</a>): <input id="temperature" style="width: 4rem" disabled /> <button id="copy-temperature">Copy</button><br />
+        Luminance (relative, see
+        <a href="https://www.w3.org/TR/2008/REC-WCAG20-20081211/#relativeluminancedef" target="_blank">WCAG definition</a>):
+        <input id="luminance" style="width: 4rem" disabled />
+        <button id="copy-luminance">Copy</button><br />
+        Temperature (Kelvin, estimated, from
+        <a href="https://www.zombieprototypes.com/?p=210" target="_blank">color temperature scale</a>):
+        <input id="temperature" style="width: 4rem" disabled />
+        <button id="copy-temperature">Copy</button><br />
     </div>
 </div>
 
