--- a/views/pages/tools/keycode-info.hbs
+++ b/views/pages/tools/keycode-info.hbs
@@ -1,7 +1,5 @@
 <div class="tooltext">
-    <span id="ready"
-        ><span style="color: #009c3f"><i class="fa-solid fa-check"></i> Ready to get key information!</span></span
-    >
+    <span id="ready"><span style="color: #009c3f"><i class="fa-solid fa-check"></i> Ready to get key information!</span></span>
     <br /><br />Click any key to get information, click any cell to copy the information.
     <table class="keycodes">
         <thead>
