--- a/views/pages/fun/mp3-player.hbs
+++ b/views/pages/fun/mp3-player.hbs
@@ -13,9 +13,7 @@
                     <div id="progress-bar"></div>
                 </div>
                 <div class="buttons">
-                    <span style="margin-right: 20px"
-                        ><span id="toggle-shuffle"><i id="shuffle-icon" class="fa-solid fa-shuffle"></i><i id="shuffle-status" class="fa-solid fa-xmark"></i></span
-                    ></span>
+                    <span style="margin-right: 20px"><span id="toggle-shuffle"><i id="shuffle-icon" class="fa-solid fa-shuffle"></i><i id="shuffle-status" class="fa-solid fa-xmark"></i></span></span>
                     <span><i class="player-icon fa-solid fa-step-backward" id="previous"></i></span>
                     <span><i class="player-icon fa-solid fa-backward" id="rewind"></i></span>
                     <span><i class="player-icon fa-solid fa-play" id="play-pause"></i></span>
