--- a/views/pages/tools/base64-image-converter.hbs
+++ b/views/pages/tools/base64-image-converter.hbs
@@ -3,13 +3,14 @@
         <div class="tooltext">
             Image:<br /><br />
             <label for="file-upload" class="file-upload"><i class="fa-solid fa-file-upload"></i> Upload</label>
-            <input id="file-upload" type="file" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span> <br /><button id="encode">Encode <i id="encode-runResult"></i></button>
+            <input id="file-upload" type="file" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span>
+            <br /><button id="encode">Encode <i id="encode-result"></i></button>
             <button id="clear">Clear</button>
         </div>
         <div class="tooltext">
             Base64 Encoded Image:<br />
             <textarea id="string-input" style="width: 350px; max-width: 80%"></textarea>
-            <br /><button id="decode">Decode <i id="decode-runResult"></i></button>
+            <br /><button id="decode">Decode <i id="decode-result"></i></button>
             <button id="clear2">Clear</button>
         </div>
     </div>
@@ -18,7 +19,8 @@
         <div class="tooltext">
             Base64 Encoded Image:<br />
             <textarea id="b64-result" style="width: 350px; max-width: 80%" readonly></textarea>
-            <br /><button id="b64-copy-result" disabled>Copy</button> <a id="b64-open-result-link" target="_blank"><button id="b64-open-result" disabled>Open in new tab</button></a>
+            <br /><button id="b64-copy-result" disabled>Copy</button>
+            <a id="b64-open-result-link" target="_blank"><button id="b64-open-result" disabled>Open in new tab</button></a>
         </div>
         <div class="tooltext">
             Image:<br />
