--- a/views/pages/tools/binary-calc.hbs
+++ b/views/pages/tools/binary-calc.hbs
@@ -6,7 +6,8 @@
         <option value="3" selected>Decimal (10)</option>
         <option value="4">Hex (16)</option>
     </select>
-    <br /><input id="input" /> <br /><button id="reset">Reset</button>
+    <br /><input id="input" />
+    <br /><button id="reset">Reset</button>
 </div>
 <hr style="margin-top: 30px" />
 <div class="tooltext">
@@ -18,5 +19,6 @@
         <option value="3">Decimal (10)</option>
         <option value="4">Hex (16)</option>
     </select>
-    <br /><input id="output" readonly /><br /><button id="copy-output" disabled>Copy</button> <button id="toggle-spacers" disabled>Toggle spacers (spaces, commas)</button>
+    <br /><input id="output" readonly /><br /><button id="copy-output" disabled>Copy</button>
+    <button id="toggle-spacers" disabled>Toggle spacers (spaces, commas)</button>
 </div>
