--- a/views/pages/tools/binary-text.hbs
+++ b/views/pages/tools/binary-text.hbs
@@ -1,7 +1,7 @@
 <div class="tooltext">
     Input:<br />
     <textarea id="input" style="width: 50%"></textarea>
-    <br /><button id="to-binary">To Binary <i id="encode-runResult"></i></button><button id="from-binary">From Binary <i id="decode-runResult"></i></button>
+    <br /><button id="to-binary">To Binary <i id="encode-result"></i></button><button id="from-binary">From Binary <i id="decode-result"></i></button>
     <button id="clear">Clear</button>
 </div>
 <hr style="margin-top: 30px" />
