--- a/views/pages/tools/image-converter.hbs
+++ b/views/pages/tools/image-converter.hbs
@@ -3,7 +3,8 @@
         <div class="tooltext">
             Image:<br /><br />
             <label for="file-upload" class="file-upload"><i class="fa-solid fa-file-upload"></i> Upload</label>
-            <input id="file-upload" type="file" accept="image/*" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span> <br />
+            <input id="file-upload" type="file" accept="image/*" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span>
+            <br />
             <button id="load" disabled>Load</button>
             <button id="clear">Clear</button>
         </div>
@@ -26,7 +27,8 @@
         </div>
         <div class="tooltext">
             Converted Image:<br />
-            <img id="image-output" style="max-width: 80%" src="" /> <br />
+            <img id="image-output" style="max-width: 80%" src="" />
+            <br />
             <a id="open-converted-link" target="_blank"><button id="open-converted-result" disabled>Open in new tab</button></a>
             <a id="download-converted-link" target="_blank" download><button id="download-converted-result" disabled>Download</button></a>
         </div>
