--- a/views/pages/tools/ip-info.hbs
+++ b/views/pages/tools/ip-info.hbs
@@ -1,15 +1,23 @@
 <div class="tooltext">
-    All information based soley on your IP information, <em>not</em> your actual location.
+    All information based soley on your IP information,
+    <em>not</em>
+    your actual location.
 
     <br /><br /><span id="reload-prompt" class="error">If you see this message, please reload the page.<br /></span>
 
-    <span class="tooltip-right" data-tooltip="Internet Protocol">IP</span> Address: <span id="ip-address"><span class="error">Loading...</span></span>
+    <span class="tooltip-right" data-tooltip="Internet Protocol">IP</span>
+    Address:
+    <span id="ip-address"><span class="error">Loading...</span></span>
 
-    <br /><span class="tooltip-right" data-tooltip="Internet Service Provider">ISP</span>: <span id="isp"><span class="error">Loading...</span></span>
+    <br /><span class="tooltip-right" data-tooltip="Internet Service Provider">ISP</span>:
+    <span id="isp"><span class="error">Loading...</span></span>
 
-    <br />Location: <span id="location"><span class="error">Loading...</span></span>
+    <br />Location:
+    <span id="location"><span class="error">Loading...</span></span>
 
-    <br />Latitude (north-south): <span id="latitude"><span class="error">Loading...</span></span>
+    <br />Latitude (north-south):
+    <span id="latitude"><span class="error">Loading...</span></span>
 
-    <br />Longitude (east-west): <span id="longitude"><span class="error">Loading...</span></span>
+    <br />Longitude (east-west):
+    <span id="longitude"><span class="error">Loading...</span></span>
 </div>
