--- a/views/pages/tools/list-sorter.hbs
+++ b/views/pages/tools/list-sorter.hbs
@@ -1,7 +1,8 @@
 <div class="tooltext">
     Input:<br />
     <textarea id="input" style="width: 50%"></textarea>
-    <br /><span style="font-weight: 500; color: dimgray; font-size: 16px"><span class="tooltip-bottom" data-tooltip="What separates items in the list (\n = newline)">Separator</span>: </span><input id="separator" value="\n" style="width: 4rem" /> <br /><button id="alphabetize-normal">Alphabetize (A-Z) <i id="alphabetize-runResult"></i></button><button id="numerize">Numerize (filters non numbers) <i id="numerize-runResult"></i></button><button id="randomize">Randomize <i id="randomize-runResult"></i></button><button id="reverse">Reverse current order <i id="reverse-runResult"></i></button>
+    <br /><span style="font-weight: 500; color: dimgray; font-size: 16px"><span class="tooltip-bottom" data-tooltip="What separates items in the list (\n = newline)">Separator</span>: </span><input id="separator" value="\n" style="width: 4rem" />
+    <br /><button id="alphabetize-normal">Alphabetize (A-Z) <i id="alphabetize-result"></i></button><button id="numerize">Numerize (filters non numbers) <i id="numerize-result"></i></button><button id="randomize">Randomize <i id="randomize-result"></i></button><button id="reverse">Reverse current order <i id="reverse-result"></i></button>
     <button id="clear">Clear</button>
 </div>
 <hr style="margin-top: 30px" />
