--- a/views/pages/tools/quick-copy.hbs
+++ b/views/pages/tools/quick-copy.hbs
@@ -1,12 +1,16 @@
 <div class="basic-grid" style="--min-width: 450px">
     <div class="tooltext" style="font-weight: 500; color: dimgray; font-size: 16px">
         <button id="clear-clipboard" style="padding: 0.5rem">Clear Clipboard</button><br /><br />
-        Zero Width Space (&ZeroWidthSpace;): <button id="copy-zws">Copy</button><br />
-        Non-Breaking Space/Hard Space (&nbsp;): <button id="copy-nbsp">Copy</button><br />
-        Em Space (&emsp;): <button id="copy-ems">Copy</button><br />
-        En Space (&ensp;): <button id="copy-ens">Copy</button><br />
-        Thin Space (&thinsp;): <button id="copy-ts">Copy</button><br />
-        <!-- Some other space variants: https://i.stack.imgur.com/FF9ka.png -->
+        Zero Width Space (&ZeroWidthSpace;):
+        <button id="copy-zws">Copy</button><br />
+        Non-Breaking Space/Hard Space (&nbsp;):
+        <button id="copy-nbsp">Copy</button><br />
+        Em Space (&emsp;):
+        <button id="copy-ems">Copy</button><br />
+        En Space (&ensp;):
+        <button id="copy-ens">Copy</button><br />
+        Thin Space (&thinsp;):
+        <button id="copy-ts">Copy</button><br />
     </div>
     <div class="tooltext" style="line-height: 100%">
         Current Clipboard:<br /><br />
