--- a/views/pages/tools/radical-simplifier.hbs
+++ b/views/pages/tools/radical-simplifier.hbs
@@ -1,8 +1,14 @@
 <div class="tooltext">
     Input (<span class="code" style="color: dimgray">\(operand \cdot \sqrt[index]{radicand}\)</span>):<br />
-    Index: <input id="index" style="width: 100px" placeholder="2" /> <br />
-    Radicand: <input id="radicand" style="width: 100px" /> <br />
-    Operand: <input id="operand" style="width: 100px" placeholder="1" /> <br />
+    Index:
+    <input id="index" style="width: 100px" placeholder="2" />
+    <br />
+    Radicand:
+    <input id="radicand" style="width: 100px" />
+    <br />
+    Operand:
+    <input id="operand" style="width: 100px" placeholder="1" />
+    <br />
     <button id="simplify">Simplify</button>
     <button id="reset">Reset</button>
 </div>
@@ -11,5 +17,6 @@
 <br />
 <div class="tooltext">
     Result:<br />
-    <span id="output" class="code hidden" style="color: dimgray"></span> <span id="message"></span>
+    <span id="output" class="code hidden" style="color: dimgray"></span>
+    <span id="message"></span>
 </div>
