--- a/views/pages/tools/random-number.hbs
+++ b/views/pages/tools/random-number.hbs
@@ -1,6 +1,6 @@
 <div class="tooltext">
     <span style="font-weight: 500; color: dimgray; font-size: 16px">Min (Inclusive): <input type="number" id="min-number" value="1" style="width: 4rem" /> <br />Max (Inclusive) <input type="number" id="max-number" value="10" style="width: 4rem" /></span>
-    <br /><button id="generate-number">Generate <i id="generate-runResult"></i></button>
+    <br /><button id="generate-number">Generate <i id="generate-result"></i></button>
     <button id="reset">Reset</button>
 </div>
 <hr style="margin-top: 30px" />
