--- a/views/pages/tools/svg-to-png.hbs
+++ b/views/pages/tools/svg-to-png.hbs
@@ -3,7 +3,8 @@
         <span class="tooltext">SVG:</span>
         <br />
         <textarea id="svg-input" style="width: 450px; max-width: 70%; height: 200px; max-height: 350px; resize: both"></textarea><br />
-        <button id="load-svg" style="margin-left: 0">Load SVG</button> <button id="clear">Clear</button>
+        <button id="load-svg" style="margin-left: 0">Load SVG</button>
+        <button id="clear">Clear</button>
     </div>
     <div>
         <span class="tooltext">Loaded SVG (auto-shrunk to fit):</span>
@@ -15,8 +16,10 @@
     <div style="line-height: 200%">
         <span class="tooltext">Save Options:</span>
         <br />
-        Width: <input id="width-input" style="width: 75px" type="number" min="1" max="9999" placeholder="100" /><br />
-        Height: <input id="height-input" style="width: 75px" type="number" min="1" max="9999" placeholder="100" /><br />
+        Width:
+        <input id="width-input" style="width: 75px" type="number" min="1" max="9999" placeholder="100" /><br />
+        Height:
+        <input id="height-input" style="width: 75px" type="number" min="1" max="9999" placeholder="100" /><br />
         <button id="save-png" style="margin-left: 0">Save PNG</button>
     </div>
     <div>
