--- a/views/pages/tools/temperature-converter.hbs
+++ b/views/pages/tools/temperature-converter.hbs
@@ -5,7 +5,9 @@
         <option value="2">Celsius</option>
         <option value="3">Kelvin</option>
     </select>
-    <br /><input id="input" pattern="[0-9]*" /> <br /><button id="reset">Reset</button> <button id="switch">Switch input and output</button>
+    <br /><input id="input" pattern="[0-9]*" />
+    <br /><button id="reset">Reset</button>
+    <button id="switch">Switch input and output</button>
 </div>
 <hr style="margin-top: 30px" />
 <div class="tooltext">
@@ -16,5 +18,6 @@
         <option value="2" selected>Celsius</option>
         <option value="3">Kelvin</option>
     </select>
-    <br /><input id="output" readonly /> <br /><button id="copy-output" disabled>Copy</button>
+    <br /><input id="output" readonly />
+    <br /><button id="copy-output" disabled>Copy</button>
 </div>
