--- a/views/pages/tools/time.hbs
+++ b/views/pages/tools/time.hbs
@@ -1,12 +1,22 @@
 <div class="tooltext">
-    Time: <span id="time"></span> (<span id="dst"></span> <span class="tooltip-bottom" data-tooltip="Daylight Savings Time">DST</span>)<br />
-    Date: <span id="date"></span><br />
-    <span class="tooltip-bottom" data-tooltip="Milliseconds since January 1st, 1970 in Coordinated Universal Time (UTC)">UNIX Epoch</span> Time: <span id="unix"></span><br />
-    Timezone: <span id="timezone"></span><br /><br />
-    Time in Japan (<span class="tooltip-bottom" data-tooltip="Japan Standard Time">JST</span>): <span id="jp-time"></span><br />
-    Time in Costa Rica (<span class="tooltip-bottom" data-tooltip="Central Standard Time">CST</span>): <span id="cr-time"></span><br />
-    Time in England/Ireland (<span class="mobile-hidden"><span class="tooltip-bottom" data-tooltip="Greenwich Mean Time (not observed during Daylight Savings Time)">GMT</span>/<span class="tooltip-bottom" data-tooltip="British Summer Time (observed during Daylight Savings Time)">BST</span></span
-    ><span class="mobile-only"><span class="tooltip-left" data-tooltip="Greenwich Mean Time (not observed during Daylight Savings Time)">GMT</span>/<span class="tooltip-left" data-tooltip="British Summer Time (observed during Daylight Savings Time)">BST</span></span
-    >): <span id="gb-time"></span><br />
-    <span class="tooltip-bottom" data-tooltip="Coordinated Universal Time">UTC</span> Time: <span id="utc-time"></span><br />
+    Time:
+    <span id="time"></span>
+    (<span id="dst"></span>
+    <span class="tooltip-bottom" data-tooltip="Daylight Savings Time">DST</span>)<br />
+    Date:
+    <span id="date"></span><br />
+    <span class="tooltip-bottom" data-tooltip="Milliseconds since January 1st, 1970 in Coordinated Universal Time (UTC)">UNIX Epoch</span>
+    Time:
+    <span id="unix"></span><br />
+    Timezone:
+    <span id="timezone"></span><br /><br />
+    Time in Japan (<span class="tooltip-bottom" data-tooltip="Japan Standard Time">JST</span>):
+    <span id="jp-time"></span><br />
+    Time in Costa Rica (<span class="tooltip-bottom" data-tooltip="Central Standard Time">CST</span>):
+    <span id="cr-time"></span><br />
+    Time in England/Ireland (<span class="mobile-hidden"><span class="tooltip-bottom" data-tooltip="Greenwich Mean Time (not observed during Daylight Savings Time)">GMT</span>/<span class="tooltip-bottom" data-tooltip="British Summer Time (observed during Daylight Savings Time)">BST</span></span><span class="mobile-only"><span class="tooltip-left" data-tooltip="Greenwich Mean Time (not observed during Daylight Savings Time)">GMT</span>/<span class="tooltip-left" data-tooltip="British Summer Time (observed during Daylight Savings Time)">BST</span></span>):
+    <span id="gb-time"></span><br />
+    <span class="tooltip-bottom" data-tooltip="Coordinated Universal Time">UTC</span>
+    Time:
+    <span id="utc-time"></span><br />
 </div>
