--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,12 +20,10 @@
 <table class="tools-table">
     <tbody>
         {{#each this}}
-            <tr>
-                <td>
-                    <a href="{{this.link}}"><i class="page-icon fa-regular fa-{{this.icon}}"></i>{{this.title}}</a>
-                </td>
-                <td>{{{this.description}}}</td>
-            </tr>
+        <tr>
+            <td><a href="{{this.link}}"><i class="page-icon fa-regular fa-{{this.icon}}"></i>{{this.title}}</a></td>
+            <td>{{{this.description}}}</td>
+        </tr>
         {{/each}}
     </tbody>
 </table>
