--- a/views/pages/info/coins-list.hbs
+++ b/views/pages/info/coins-list.hbs
@@ -3,7 +3,7 @@ Welcome! Here is a list of coins I have and need!<br /><br /><br />
 Password
 <input type="text" id="login-password" style="width: 50px" />
 <button id="login-button">Login</button>
-<span id="login-result" style="padding-left: 5px;"></span><br /><br /><br />
+<span id="login-result" style="padding-left: 5px"></span><br /><br /><br />
 
 <hr />
 <div id="coins-list">Please login to view this!</div>
