--- a/views/pages/tools/calendar.hbs
+++ b/views/pages/tools/calendar.hbs
@@ -46,9 +46,17 @@
         <div id="display-day"></div>
         <div id="display-date"></div>
         <div id="display-month-year"></div>
-        <div class="events">Events:
+        <div class="events">
+            Events:
             <ul id="events-list">None!</ul>
         </div>
-        <div id="todo-list"></div>
+        <div class="todo-list">
+            To-do List:
+            <div id="todo-list">
+                <input type="text" id="login-password" />
+                <button id="login-button">Login</button>
+                <span id="login-result" style="padding-left: 5px"></span>
+            </div>
+        </div>
     </div>
 </div>
