--- a/views/pages/tools/image-converter.hbs
+++ b/views/pages/tools/image-converter.hbs
@@ -2,7 +2,7 @@
     <div class="basic-grid" style="--min-width: 450px">
         <div class="tooltext">
             Image:<br /><br />
-            <label for="file-upload" class="file-upload"><i class="fa-solid fa-file-upload"></i> Upload</label>
+            <label id="file-upload-label" for="file-upload" class="file-upload"><i class="fa-solid fa-file-upload"></i> Upload</label>
             <input id="file-upload" type="file" accept="image/*" /><br /><span style="font-size: 14px; color: dimgray" id="file-message"></span>
             <br />
             <button id="load" disabled>Load</button>
