cleanup a bunch of scripts

--- a/views/pages/fun/eight-ball.hbs
+++ b/views/pages/fun/eight-ball.hbs
@@ -1,6 +1,12 @@
 <div class="tooltext">
     Your Question:
-    <input id="question" />
+    <input id="question-input" />
     <button id="roll">Roll ball!</button>
-    <span id="result"></span>
+    <hr style="margin: 10px 0" />
+    <div id="result">
+        You asked:
+        <span id="question-display">Enter question above!</span><br />
+        The ball says:
+        <span id="answer-output">Nothing... yet!</span>
+    </div>
 </div>
