use `label`s for `calendar`, rename tooltips stylesheet

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,4 @@
-@import '/styles/tooltip-styles.css';
+@import '/styles/tooltips.css';
 
 /* For Font Awesome icons, see: https://fontawesome.com/v6/search?m=free&s=solid */
 @import url('/styles/external/font-awesome.css');
