--- a/views/pages/tools/color-info.hbs
+++ b/views/pages/tools/color-info.hbs
@@ -57,7 +57,7 @@
 </div>
 
 <div class="tooltext" style="margin-top: 20px">Color History (click to switch):</div>
-<div id="color-history"></div>
+<ul id="color-history"></ul>
 <div id="full-color">
     <div id="full-color-message">Press <kbd>Escape</kbd> or click anywhere to exit this menu!</div>
 </div>
