--- a/public/styles/tooltips.css
+++ b/public/styles/tooltips.css
@@ -1,8 +1,7 @@
 /* Modified from https://codepen.io/cbracco/pen/nufHz */
 
 /* Base styles for the element that has a tooltip */
-[data-tooltip],
-.tooltip {
+[data-tooltip] {
     cursor: pointer;
     position: relative;
     text-align: center;
@@ -11,17 +10,11 @@
 
 /* Base styles for the entire tooltip */
 [data-tooltip]:before,
-[data-tooltip]:after,
-.tooltip:before,
-.tooltip:after {
+[data-tooltip]:after {
     opacity: 0;
     pointer-events: none;
     position: absolute;
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
-    -webkit-transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out, -webkit-transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
-    -moz-transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out, -moz-transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
     transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out, transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
     visibility: hidden;
 }
@@ -30,17 +23,12 @@
 [data-tooltip]:hover:before,
 [data-tooltip]:hover:after,
 [data-tooltip]:focus:before,
-[data-tooltip]:focus:after,
-.tooltip:hover:before,
-.tooltip:hover:after,
-.tooltip:focus:before,
-.tooltip:focus:after {
+[data-tooltip]:focus:after {
     opacity: 1;
     visibility: visible;
 }
 
 /* Base styles for the tooltip's directional arrow */
-.tooltip:before,
 [data-tooltip]:before {
     background: transparent;
     border: 6px solid transparent;
@@ -49,7 +37,6 @@
 }
 
 /* Base styles for the tooltip's content area */
-.tooltip:after,
 [data-tooltip]:after {
     background-color: #000;
     background-color: hsla(0, 0%, 17%, 0.9);
@@ -68,8 +55,6 @@
 /* Top (default) */
 [data-tooltip]:before,
 [data-tooltip]:after,
-.tooltip:before,
-.tooltip:after,
 .tooltip-top:before,
 .tooltip-top:after {
     bottom: 100%;
@@ -77,7 +62,6 @@
 }
 
 [data-tooltip]:before,
-.tooltip:before,
 .tooltip-top:before {
     border-top-color: #000;
     border-top-color: hsla(0, 0%, 17%, 0.9);
@@ -87,7 +71,6 @@
 
 /* Horizontally align top/bottom tooltips */
 [data-tooltip]:after,
-.tooltip:after,
 .tooltip-top:after {
     margin-left: -80px;
 }
@@ -96,16 +79,10 @@
 [data-tooltip]:hover:after,
 [data-tooltip]:focus:before,
 [data-tooltip]:focus:after,
-.tooltip:hover:before,
-.tooltip:hover:after,
-.tooltip:focus:before,
-.tooltip:focus:after,
 .tooltip-top:hover:before,
 .tooltip-top:hover:after,
 .tooltip-top:focus:before,
 .tooltip-top:focus:after {
-    -webkit-transform: translateY(-12px);
-    -moz-transform: translateY(-12px);
     transform: translateY(-12px);
 }
 
@@ -130,8 +107,6 @@
 .tooltip-left:hover:after,
 .tooltip-left:focus:before,
 .tooltip-left:focus:after {
-    -webkit-transform: translateX(-12px);
-    -moz-transform: translateX(-12px);
     transform: translateX(-12px);
 }
 
@@ -155,8 +130,6 @@
 .tooltip-bottom:hover:after,
 .tooltip-bottom:focus:before,
 .tooltip-bottom:focus:after {
-    -webkit-transform: translateY(12px);
-    -moz-transform: translateY(12px);
     transform: translateY(12px);
 }
 
@@ -179,8 +152,6 @@
 .tooltip-right:hover:after,
 .tooltip-right:focus:before,
 .tooltip-right:focus:after {
-    -webkit-transform: translateX(12px);
-    -moz-transform: translateX(12px);
     transform: translateX(12px);
 }
 
