`coins-list` updates
– added history logging
– added keyboard shortcuts
– check for false updates

--- a/views/pages/info/coins-list.hbs
+++ b/views/pages/info/coins-list.hbs
@@ -3,10 +3,13 @@ Welcome! Here is a list of coins I have and need!<br /><br /><br />
 Password
 <input type="text" id="login-password" style="width: 50px" />
 <button id="login-button">Login</button>
-<span id="login-result" style="padding-left: 5px"></span><br /><br /><br />
+<span id="login-result" style="padding-left: 5px"></span>
 
-<hr />
+<hr style="margin-top: 20px" />
 <div id="coins-list">Please login to view this!</div>
+
+<hr style="margin-top: 20px" />
+<ul id="change-history">No changes made!</ul>
 <div id="modal">
     <span id="close-modal">&times;</span>
     <img id="modal-image" />
