--- a/public/styles/pages/info/coins-list.css
+++ b/public/styles/pages/info/coins-list.css
@@ -166,3 +166,23 @@ tr[data-upgrade='true'] {
 button.coin-variant-expand {
     margin-left: 5px;
 }
+
+#change-history {
+    border: 4px solid #16181c;
+    margin-top: 20px;
+    padding: 15px;
+    padding-left: 10px;
+}
+
+#change-history li {
+    margin-inline: 30px;
+}
+
+#change-history li::marker {
+    content: '—   ';
+}
+
+.time-tooltip {
+    margin-left: 8px;
+    text-decoration: none;
+}
