add export data button to `coins-list`

--- a/views/pages/info/coins-list.hbs
+++ b/views/pages/info/coins-list.hbs
@@ -10,6 +10,7 @@ Password
 
 <hr style="margin-top: 20px" />
 <ul id="change-history">No changes made!</ul>
+<button id="export-data" disabled>Export coin data</button>
 <div id="modal">
     <span id="close-modal">&times;</span>
     <img id="modal-image" />
