--- a/public/styles/pages/info/coins-list.css
+++ b/public/styles/pages/info/coins-list.css
@@ -196,3 +196,8 @@ button.coin-variant-expand {
     margin-left: 8px;
     text-decoration: none;
 }
+
+button#export-data {
+    margin-top: 10px;
+    padding: 5px;
+}
